# concatNamesExel

./: Formatted for Server.xlsx  NewADUsers.csv  main.py  pyproject.toml  pyscp.csv  pyscp.xlsx  pyscp1.xlsx
