[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["harveyj123 <71397990+harveyj123@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
